samples/_failures_safe/1761393411_1fd18d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38bbbdf3.c: In function ‘main’:
./samples/SAFE/__tmp_38bbbdf3.c:158:21: error: expected declaration or statement at end of input
  158 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_38bbbdf3.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38bbbdf3.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38bbbdf3.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38bbbdf3.c:158:21: error: expected declaration or statement at end of input
